--- a/MarvelCharacters/androidApp/src/main/res/layout/activity_characters.xml
+++ b/MarvelCharacters/androidApp/src/main/res/layout/activity_characters.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MainActivity">
+    tools:context=".ui.characters.CharactersActivity">
 
     <pl.droidsonroids.gif.GifImageView
         android:id="@+id/imgSplash"
@@ -24,8 +24,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/charactersList"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:padding="16dp"
         android:clipToPadding="false"
         app:layout_constraintBottom_toBottomOf="parent"
